kubernetes/base/redis.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: ${PROJECT_NAME}-redis
  labels:
    app: ${PROJECT_NAME}-redis
spec:
  ports:
  - port: 6379
    name: ${PROJECT_NAME}-redis
  selector:
    app: ${PROJECT_NAME}-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${PROJECT_NAME}-redis
  labels:
    app: ${PROJECT_NAME}-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${PROJECT_NAME}-redis
  template:
    metadata:
      labels:
        app: ${PROJECT_NAME}-redis
    spec:
      containers:
      - name: ${PROJECT_NAME}-redis
        image: redis
