kubernetes/base/server.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: ${PROJECT_NAME}-server
  labels:
    app: ${PROJECT_NAME}-server
spec:
  ports:
  - port: 1234
    name: ${PROJECT_NAME}-server
  selector:
    app: ${PROJECT_NAME}-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${PROJECT_NAME}-server
  labels:
    app: ${PROJECT_NAME}-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${PROJECT_NAME}-server
  template:
    metadata:
      labels:
        app: ${PROJECT_NAME}-server
    spec:
      containers:
      - name: ${PROJECT_NAME}-server
        image: taavettik/riffy-server:latest
